# t

./: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.html  (+8 more)
.next/types/: routes.d.ts  validator.ts
agent-cpp/: CMakeLists.txt  README.md
agent-cpp/config/: agent.config.example.json
agent-cpp/src/: AgentApp.cpp  AgentApp.h  AudioCapture.cpp  AudioCapture.h  CameraCapture.cpp  CameraCapture.h  CommandPoller.cpp  CommandPoller.h  Config.cpp  Config.h  DeviceRegistry.cpp  DeviceRegistry.h  Heartbeat.cpp  Heartbeat.h  Logger.cpp  Logger.h  ScreenCapture.cpp  ScreenCapture.h  Screenshot.cpp  Screenshot.h  StartupOption.cpp  StartupOption.h  SupabaseClient.cpp  SupabaseClient.h  WebRTCClient.cpp  WebRTCClient.h  main.cpp
app/: globals.css  layout.tsx
app/audit/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
components/: ApproveDeviceButton.tsx  AudioPanel.tsx  AuditLogTable.tsx  CommandButton.tsx  DeviceCard.tsx  DeviceDetail.tsx  DeviceGrid.tsx  DeviceSelector.tsx  GlassCard.tsx  LiveScreenViewer.tsx  LoginForm.tsx  LogsPanel.tsx  WebcamViewer.tsx
lib/: auth.ts  logger.ts  security.ts  supabaseClient.ts  supabaseServer.ts  types.ts  webrtc.ts
(+87 files in other folders)
